--- a/index.html
+++ b/index.html
@@ -8,6 +8,112 @@
   <body>
     <main>
       <!-- Complete the Exercises HERE -->
+     <section>
+      <table>
+        <thead>
+        <tr>
+          <th>
+            drinks
+          </th>
+          <th>
+            total servings
+          </th>
+          <th>
+            serving size
+          </th>
+            <th>
+              calories per serving
+            </th>
+            <th>
+              carbs per serving
+            </th>
+              <th>
+                sugars per serving
+              </th>
+              <th>
+                sodium per serving
+              </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+              <td>Coca Cola</td>
+              <td>1</td>
+              <td>20 floz</td>
+              <td>240</td>
+              <td>65g</td>
+              <td>65g</td>
+              <td>75mg</td>
+          </tr>
+          <tr>
+            <td>Pepsi</td>
+            <td>1</td>
+            <td>12 floz</td>
+            <td>150</td>
+            <td>41g</td>
+            <td>41g</td>
+            <td>30mg</td>
+        </tr>
+        <tr>
+          <td>Coca Cola Zero</td>
+          <td>1</td>
+          <td>20 floz</td>
+          <td>0</td>
+          <td>0g</td>
+          <td>0g</td>
+          <td>70mg</td>
+      </tr>
+      <tr>
+        <td>Dr. Pepper</td>
+        <td>1</td>
+        <td>12 floz</td>
+        <td>150</td>
+        <td>40g</td>
+        <td>39g</td>
+        <td>55mg</td>
+    </tr>
+    <tr>
+      <td>Mountain Dew</td>
+      <td>1</td>
+      <td>12 floz</td>
+      <td>150</td>
+      <td>46g</td>
+      <td>46g</td>
+      <td>60mg</td>
+  </tr>
+        </tbody>
+      </table>
+    </section>
+      <form>
+        <fieldset>
+        <label for="drinkname"> Name </label>
+        <input type="text" name="drinkname" id="drinkname">
+      </fieldset>
+      <fieldset>
+        <label for="totalservings"> Total Servings </label>
+        <input type="text" name="totalservings" id="totalservings">
+      </fieldset>
+      <fieldset>
+        <label for="servingsize"> Serving Size </label>
+        <input type="text" name="servingsize" id="servingsize">
+      </fieldset>
+      <fieldset>
+        <label for="calories"> Calories </label>
+        <input type="text" name="calories" id="calories">
+      </fieldset>
+      <fieldset>
+        <label for="carbs> Carbs </label>
+        <input type="text" name="carbs" id="carbs">
+      </fieldset>
+      <fieldset>
+        <label for="sugars"> Sugars </label>
+        <input type="text" name="sugars" id="sugars">
+      </fieldset>
+      <fieldset>
+        <label for="sodium"> sodium </label>
+        <input type="text" name="sodium" id="sodium">
+      </fieldset>
+    </form>
     </main>
   </body>
 </html>
